--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dat.gui": "^0.7.2",
     "live-server": "^1.2.0",
     "three": "^0.96.0"
   }
